CHANGES SINCE FLTK 1.0.9

	- Updated the configure script and makeinclude.in file
	  to work with the Sun PRO compilers.

	- Disabled the WIN32 async socket select code by default:
	  it doesn't seem to work anymore...

	- Fl::below_mouse() was incorrectly clearing e_is_click;
	  this prevented any double-clicks from getting
	  through...

	- No longer clear Fl::keysym on every event, this makes
	  better back compatability and fixes Win2000

	- Fluid now restores which tab in an Fl_Tabs was
	  selected when loads .fl files.

	- Hack to fix the annoying "raise another application
	  when a modal window is closed" problem on WIN32.

	- Fl_Tabs now draws the background behind the tabs.

	- Fl::set_fonts() on WIN32 fixed to work before the
	  first window is shown.

	- CUA function keys, code submitted by George Yohng
	  <yohng@drivex.dosware.8m.com>

	- Another attempt to get glut.h to work on WIN32.

	- Fl_Menu_::add() ignores '&' signs when comparing menu
	  items, so you don't have to make the shortcuts the
	  same all the time.

	- Fixed bit-flipping patterns in WIN32 bitmap code.

	- Fixed size of data written by gif images to .C files

	- Menu titles and buttons in the menubar can be images
	  (allows it to be used as a toolbar)

	- Reads selectBackground from the xrdb database to set
	  the selection color. Adding this to your .Xdefaults
	  will make fltk and Motif programs look much more
	  Windoze-like:

	      *selectForeground: white
	      *selectBackground: #000080

	- FL_WHEN_RELEASE on Fl_Input will now do the callback
	  when the input field is hidden, for instance when it
	  is on a tab and the user switches to another tab.

	- Fl_Gl_Window with an overlay on X always resized any
	  child windows even if you turned resizable() off
	  because it turned it back on to resize the overlay
	  window. This patch avoids changing resizable().

	- Fix so multiple Fl::add_idle() calls works

	- The input focus got messed up if you called